--- a/bio.html
+++ b/bio.html
@@ -47,8 +47,9 @@
                 Преподавала (иногда преподаю до сих пор) английский, русский, немецкий, 
                 французский детям с 4 до 18 лет, а также взрослым 
                 разного возраста. Создаю моды для simple игр ( типа Thea the shattering2).
-                Пользуюсь (прям как beginner пока что) с Figma и Tilda, 
+                Пользуюсь (прям как beginner пока что) с Figma, 
                 ну и, естесственно, "всякими разными" фотошопами. 
+                Делаю простую верстку с помощью тильды, и без нее любимой. Включаю простую анимацию 2д-3д. 
             </p>
         </section>
     </main>
