--- a/bio.html
+++ b/bio.html
@@ -28,7 +28,7 @@
 <body>
     <main>
         <h1>к1рнэ</h1>
-        <h2>верстальщица-beginner</h2>
+        <h2>верстальщица-beginner + simple php-ist (+SQL/MariaDB)</h2>
         <hr>
 
         <section>
@@ -38,16 +38,18 @@
                 <li>CSS</li>
                 <li>Base JS</li>
                 <li>Super-duper English</li>
+                <li>PHP base</li>
+                <li>SQL base</li>
+                
+               
 
             </ul>
         </section>
         <section>
             <h2>about</h2>
             <p>
-                Преподавала (иногда преподаю до сих пор) английский, русский, немецкий, 
-                французский детям с 4 до 18 лет, а также взрослым 
-                разного возраста. Создаю моды для simple игр ( типа Thea the shattering2).
-                Пользуюсь (прям как beginner пока что) с Figma, 
+               Создаю моды для simple игр ( типа Thea the shattering2).
+                Пользуюсь  Figma, 
                 ну и, естесственно, "всякими разными" фотошопами. 
                 Делаю простую верстку с помощью тильды, и без нее любимой. Включаю простую анимацию 2д-3д. 
             </p>
