--- a/bio.html
+++ b/bio.html
@@ -28,7 +28,7 @@
 <body>
     <main>
         <h1>к1рнэ</h1>
-        <h2>верстальщица-beginner + simple php-ist (+SQL/MariaDB)</h2>
+        <h2>html-beginner + simple php-ist (+SQL/MariaDB) + Laravel(light)user</h2>
         <hr>
 
         <section>
@@ -37,9 +37,10 @@
                 <li>HTML+emmet</li>
                 <li>CSS</li>
                 <li>Base JS</li>
-                <li>Super-duper English</li>
+                <li>C1 English</li>
                 <li>PHP base</li>
                 <li>SQL base</li>
+                <li>Laravel base</li>
                 
                
 
@@ -48,10 +49,7 @@
         <section>
             <h2>about</h2>
             <p>
-               Создаю моды для simple игр ( типа Thea the shattering2).
-                Пользуюсь  Figma, 
-                ну и, естесственно, "всякими разными" фотошопами. 
-                Делаю простую верстку с помощью тильды, и без нее любимой. Включаю простую анимацию 2д-3д. 
+              Doing my best to get more knowledge to use them in projects 😼
             </p>
         </section>
     </main>
